--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Conversation Intelligence</title>
-  <link href="./resources/css/font-awesome.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="./resources/css/font-awesome.css" />
-  <link rel="stylesheet" href="./resources/css/app.css" />
+  <link rel="stylesheet" href="/app/resources/css/font-awesome.css" />
+  <link rel="stylesheet" href="/app/resources/css/app.css" />
 </head>
 
 <body>
   <div id="app">
   </div>
-  <script type="module" src="./app/app.js" defer></script>
+  <script type="module" src="/app/app.js" defer></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       new App("app");
