--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
   </div>
-  <script type="module" src="/app/app.js" defer></script>
+  <script type="module" src="./app/app.js" defer></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       new App("app");
