changed relative path

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Conversation Intelligence</title>
-  <link rel="stylesheet" href="/app/resources/css/font-awesome.css" />
-  <link rel="stylesheet" href="/app/resources/css/app.css" />
+  <link rel="stylesheet" href="./app/resources/css/font-awesome.css" />
+  <link rel="stylesheet" href="./app/resources/css/app.css" />
 </head>
 
 <body>
